--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>
-            ameos+
-        </title>
-        <style>
-            
-        </style>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
+    <title>AmeOS</title>
+</head>
+<body>
+    <div class="header">
+        <img src="assets/logos/favicon.png">
+        <p class="ameos">AmeOS</p>
+        <p class="panamint">Panamint</p>
+        <p class="downloads">Downloads</p>
+        <p class="contact">Contact us</p>
+    </div>
 
-    </head>
-    <body class="body">
-        <div class="topbar">
-            <a>
-             test
-            </a>
+    <section class="landingpage">
+        <div class="introducing">
+            <img src="assets/ame12OS/logo.png" class="logo">
+            <h1>Your project, <span>unleashed.</span></h1>
         </div>
-    </body>
+        <img src="assets/ame12OS/landing.png" class="image">
+    </section>
+
+    <section class="landingpage2">
+        <h1>The no-brainer operating system design.<br><span>Designed </span> from the ground up</h1>
+        <p>Recreate, re-do, reuse for your own Figma project. <br>AmeOS lets you do all that — and even more.</p>
+        <img src="assets/ame12OS/screenshots.png">
+    </section>
+
+    <section class="landingpage3">
+        <h1>A more intelligent Lock screen</h1>
+        <p>Use Custom lock screen album cover to make your lockscreen more personal to you - in Figma</p>
+        <img src="assets/ame12OS/lockscreens.png">
+    </section>
+
+    <section class="download">
+        <h1>Install AmeOS for Figma anywhere.</h1>
+        <p>You can try AmeOS everywhere* - a phone, PC or even a fridge. <br>Completely for free.</p>
+    </section>
+</body>
 </html>
