button add (style will add later)

--- a/index.html
+++ b/index.html
@@ -39,5 +39,11 @@
         <h1>Install AmeOS for Figma anywhere.</h1>
         <p>You can try AmeOS everywhere* - a phone, PC or even a fridge. <br>Completely for free.</p>
     </section>
+
+    <section>
+        <button>
+            Try Ame12OS
+        </button>
+    </section>
 </body>
 </html>
