Added img to tittle

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/overflow.css">
     <title>AmeOS</title>
+    <link rel="icon" type="image/x-icon" href="/assets/logos/favicon.png">
 </head>
 <body>
     <div class="header">
