--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1>Install AmeOS for Figma anywhere.</h1>
         <p>You can try AmeOS everywhere* - a phone, PC or even a fridge. <br>Completely for free.</p>
         <empty></empty>
-        <button>Try Ame12OS</button>
+        <button onclick="ame12OS()">Try Ame12OS</button>
         <p class="subtext">Older versions of AmeOS</p>
         <p class="startext">*if your device is powerful enough for Figma</p>
     </section>
